<resources>
    <string name="app_name">Depression</string>

    <string name="tutorial_title">
        Firebase\n
        authentication
    </string>

    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">
        Don\'t have an account yet? <font color="#FFBD2A"><big><b>Register Now</b></big></font>
    </string>
    <string name="registration_successful">Registraion successful!</string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <font color="#FFBD2A"><big><b>Login</b></big></font></string>
    <string name="login_successful">Login Successful!</string>
    <string name="request_canceled">Request canceled</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Depression Test</string>
    <string name="menu_gallery">ChatBot</string>
    <string name="menu_slideshow">Meditation Tips</string>
    <string name="menu_yoga">Yoga Tips</string>
    <string name="menu_chants">Chants</string>
    <string name="menu_bhagvad_gita">Bhagvad Gita</string>
    <string name="menu_logout">Logout</string>
    <string name="default_home">Home</string>
    <string name="start_depression_test">Depression Test</string>
    <string name="moveToChatboat">Chatboat</string>
    <string name="welcome_to_baymax">Welcome to Baymax</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="did_not_rcv">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp">OTP</string>
</resources>