<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_default_home"
            android:icon="@drawable/android_logo"
            android:title="@string/default_home" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_yoga"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_yoga" />

        <item
            android:id="@+id/nav_chants"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_chants" />

        <item
            android:id="@+id/nav_bhagvad_gita"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bhagvad_gita" />
    </group>
</menu>