<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
    <!--guideline_horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!--iv_login_background-->
    <ImageView
        android:id="@+id/iv_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_lightgrey_transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view1"

        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
       />

    <!--iv_splashScreen_inspirecoding_logo-->
    <ImageView
        android:id="@+id/iv_login_firebase_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sms_2"
        android:scaleType="centerInside"
        android:background="@drawable/white_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal"/>

    <!--tv_login_welcomeback-->
    <TextView
        android:id="@+id/tv_login_welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
       android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/dark_grey"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
        app:layout_constraintRight_toRightOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_firebase_logo"/>

    <!--til_login_email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:errorEnabled="true"
        app:hintEnabled="false"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_welcomeback">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/margin_small"
            android:hint="@string/otp"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="@dimen/textsize_large" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_verify_otp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/shape_rounded_lightblue_filled_noborder"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_large"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_not_id" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify_otp"
        />

    <ProgressBar
        android:id="@+id/spinner_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_not_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_not_rcv"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_resend"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginRight="@dimen/cardview_default_radius"
        app:layout_constraintTop_toBottomOf="@+id/til_otp"/>

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textStyle="bold"
        android:paddingRight="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"

        app:layout_constraintTop_toBottomOf="@+id/til_otp"/>


</androidx.constraintlayout.widget.ConstraintLayout>